fix mismatched parameter type, possibly associated with bug #693362